@startuml

title __CLASSES's Class Diagram__\n

  namespace classes {
    class classes.Game {
        {static} + main()
        # Game()
        - calculatePlayersPossibilityOfScoring()
        - selectStadium()
        - selectTeam1()
        - selectTeam2()
    }
  }
  

  namespace classes {
    class classes.GameConfig {
        - players : ArrayList<Player>
        - stadiums : ArrayList<Stadium>
        - teams : ArrayList<Team>
        + addPlayers()
        + addStadiums()
        + addTeams()
        + getPlayers()
        + getStadiums()
        + getTeams()
    }
  }
  

  namespace classes {
    class classes.Keeper {
        - dob : GregorianCalendar
        - name : String
        - pensSaved : int
        - totalPens : int
        + Keeper()
        + Keeper()
        + getDob()
        + getName()
        + getPensSaved()
        + getTotalPens()
        + setDob()
        + setName()
        + setPensSaved()
        + setTotalPens()
        + toString()
    }
  }
  

  namespace classes {
    class classes.Player {
        - dob : GregorianCalendar
        - name : String
        - pensScored : int
        - pensTaken : int
        - position : String
        + Player()
        + Player()
        + getDob()
        + getName()
        + getPensScored()
        + getPensTaken()
        + getPosition()
        + setDob()
        + setName()
        + setPensScored()
        + setPensTaken()
        + setPosition()
        + toString()
    }
  }
  

  namespace classes {
    class classes.Stadium {
        - capacity : int
        - name : String
        + Stadium()
        + Stadium()
        + getCapacity()
        + getName()
        + setCapacity()
        + setName()
        + toString()
    }
  }
  

  namespace classes {
    class classes.StartPage {
        - instructionsText : JTextArea
        - playButton : JButton
        - quitButton : JButton
        - viewGames : JMenuItem
        - viewInstructions : JMenuItem
        - viewStadium : JMenuItem
        - viewTeamPlayers : JMenuItem
        + StartPage()
        {static} + main()
        {static} - buildLiverpoolTeam()
        {static} - buildManuTeam()
        {static} - buildRealTeam()
    }
  }
  

  namespace classes {
    class classes.StartPage.ButtonHandler {
        + actionPerformed()
    }
  }
  

  namespace classes {
    class classes.StartPage.MenuHandler {
        + actionPerformed()
    }
  }
  

  namespace classes {
    class classes.Team {
        - name : String
        - players : Player[]
        + Team()
        + Team()
        + getKeeper()
        + getName()
        + getPlayers()
        + setKeeper()
        + setName()
        + setPlayers()
        + toString()
    }
  }
  

  classes.Game -up-|> javax.swing.JFrame
  classes.StartPage -up-|> javax.swing.JFrame
  classes.StartPage o-- classes.Stadium : anfield
  classes.StartPage o-- classes.Stadium : oldTraf
  classes.StartPage o-- classes.Stadium : santiago
  classes.StartPage +-down- classes.StartPage.ButtonHandler
  classes.StartPage +-down- classes.StartPage.MenuHandler
  classes.StartPage.ButtonHandler .up.|> java.awt.event.ActionListener
  classes.StartPage.MenuHandler .up.|> java.awt.event.ActionListener
  classes.Team o-- classes.Keeper : keeper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
